<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="true" >

    <LinearLayout
        android:id="@+id/linLayMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="visible" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <!-- Option View -->

                    <LinearLayout
                        android:id="@+id/optionView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="visible" >

                        <android.gesture.GestureOverlayView
                            android:id="@+id/gesturesOptions"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:eventsInterceptionEnabled="true"
                            android:gestureColor="#FF0000FF"
                            android:gestureStrokeType="multiple"
                            android:orientation="vertical"
                            android:uncertainGestureColor="#00000000"
                            android:visibility="visible" >

                            <CheckBox
                                android:id="@+id/checkBoxGetGPS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:clickable="true"
                                android:text="@string/get_gps" />
                        </android.gesture.GestureOverlayView>

                        <LinearLayout
                            android:id="@+id/linLayMap"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone" >

                            <TextView
                                android:id="@+id/textViewDamagePlace"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/damage_place"
                                android:visibility="visible" />

                            <projekt.zespolowy.dziura.Map.MyMapView
                                xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/mapView"
                                android:layout_width="fill_parent"
                                android:layout_height="250dp"
                                android:layout_weight="0.8"
                                android:apiKey="02cGt3VILwNGjXzgaRaFFEmdoGOcAUuLhv3QdIw"
                                android:clickable="true"
                                android:visibility="visible" />
                        </LinearLayout>

                        <android.gesture.GestureOverlayView
                            android:id="@+id/gesturesOptions2"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:eventsInterceptionEnabled="true"
                            android:gestureColor="#FF0000FF"
                            android:gestureStrokeType="multiple"
                            android:orientation="vertical"
                            android:uncertainGestureColor="#00000000"
                            android:visibility="visible" >

                            <LinearLayout
                                android:id="@+id/optionView2"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:visibility="visible" >

                                <TextView
                                    android:id="@+id/textViewDamageType"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/damage_type" />

                                <Spinner
                                    android:id="@+id/spinnerDamageType"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                                <CheckBox
                                    android:id="@+id/checkBoxGetInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="false"
                                    android:gravity="center"
                                    android:text="@string/get_info" />

                                <EditText
                                    android:id="@+id/editTextMail"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress"
                                    android:visibility="gone" >
                                </EditText>

                                <EditText
                                    android:id="@+id/editTextDescription"
                                    android:layout_width="fill_parent"
                                    android:layout_height="90dp"
                                    android:layout_weight="0.61"
                                    android:hint="@string/description_hint"
                                    android:inputType="textMultiLine" >
                                </EditText>

                                <ImageButton
                                    android:id="@+id/submit"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@android:drawable/ic_menu_send" />
                            </LinearLayout>
                        </android.gesture.GestureOverlayView>
                    </LinearLayout>
                    <!-- Camera View -->

                    <android.gesture.GestureOverlayView
                        android:id="@+id/gesturesCamera"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:eventsInterceptionEnabled="true"
                        android:gestureColor="#FF0000FF"
                        android:gestureStrokeType="multiple"
                        android:orientation="vertical"
                        android:uncertainGestureColor="#00000000"
                        android:visibility="visible" >

                        <LinearLayout
                            android:id="@+id/cameraView"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone" >

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:visibility="visible" >

                                <requestFocus />
                                <LinearLayout
                                    android:id="@+id/linLayCameraPreview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal"
                                    android:visibility="visible" >
                                    <SurfaceView
                                        android:id="@+id/surfaceViewCamera"
                                        android:layout_width="320dp"
                                        android:layout_height="240dp" />
                                    <ImageButton
                                        android:id="@+id/imageButton1"
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:layout_gravity="center"
                                        android:focusable="true"
                                        android:focusableInTouchMode="true"
                                        android:src="@android:drawable/ic_menu_camera"
                                        android:visibility="visible" />

                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/linLayPhotos"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal"
                                    android:visibility="gone" >

                                    <projekt.zespolowy.dziura.Photo.MyImageView
                                        android:id="@+id/imageViewCamera"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/ic_launcher"
                                        android:visibility="visible" />

                                    <LinearLayout
                                        android:id="@+id/linLayTagDesc"
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:gravity="center"
                                        android:orientation="vertical"
                                        android:visibility="gone" >

                                        <EditText
                                            android:id="@+id/editText7"
                                            android:layout_width="200dp"
                                            android:layout_height="120dp"
                                            android:gravity="center"
                                            android:hint="@string/photo_desc"
                                            android:inputType="textMultiLine"
                                            android:visibility="visible" />

                                        <LinearLayout
                                            android:id="@+id/linearLayout6"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:orientation="horizontal"
                                            android:visibility="visible" >

                                            <ImageButton
                                                android:id="@+id/buttonSave"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:gravity="center"
                                                android:src="@android:drawable/ic_input_add"
                                                android:visibility="visible" />

                                            <ImageButton
                                                android:id="@+id/buttonCancel"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:gravity="center"
                                                android:src="@android:drawable/ic_menu_close_clear_cancel"
                                                android:visibility="visible" />

                                        </LinearLayout>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/linLayButtons"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="vertical"
                                        android:visibility="visible" >

                                        <ImageButton
                                            android:id="@+id/buttonDeletePhoto"
                                            android:layout_width="60dp"
                                            android:layout_height="60dp"
                                            android:src="@android:drawable/ic_menu_delete"
                                            android:visibility="visible" />

                                        <ImageButton
                                            android:id="@+id/buttonNextPhoto"
                                            android:layout_width="60dp"
                                            android:layout_height="60dp"
                                            android:src="@android:drawable/ic_menu_revert"
                                            android:visibility="visible" />

                                        <ImageButton
                                            android:id="@+id/buttonDeleteTags"
                                            android:layout_width="60dp"
                                            android:layout_height="60dp"
                                            android:src="@android:drawable/ic_input_delete"
                                            android:visibility="gone" />
                                    </LinearLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linLayMinPhotos"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="bottom|center"
                                    android:orientation="vertical"
                                    android:visibility="gone" >

                                    <ImageView
                                        android:id="@+id/imageViewPhoto1"
                                        android:layout_width="80dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/ic_launcher"
                                        android:visibility="visible" />

                                    <ImageView
                                        android:id="@+id/imageViewPhoto2"
                                        android:layout_width="80dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/ic_launcher"
                                        android:visibility="visible" />

                                    <ImageView
                                        android:id="@+id/imageViewPhoto3"
                                        android:layout_width="80dp"
                                        android:layout_height="60dp"
                                        android:src="@drawable/ic_launcher"
                                        android:visibility="visible" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </android.gesture.GestureOverlayView>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

</ScrollView>